# TranslationSystemSimple

./: .gitignore  CMakeLists.txt  CMakeLists备份.txt
src/: CMakeLists.txt  main.cc
src/CProcess/: CMakeLists.txt  CProcess.cc  CProcess.h
src/CProcess/Control/: CMakeLists.txt  PulseProcess.cc  PulseProcess.h  TransControlProcess.cc  TransControlProcess.h  TransSentProcess.cc  TransSentProcess.h
src/CProcess/Dictionary/: CMakeLists.txt  CreateDictProcess.cc  CreateDictProcess.h  DeleteDictProcess.cc  DeleteDictProcess.h  DeleteWordProcess.cc  DeleteWordProcess.h  InsertSysDictProcess.cc  InsertSysDictProcess.h  InsertWordProcess.cc  InsertWordProcess.h  LoadWordProcess.cc  LoadWordProcess.h  ModifyDictProcess.cc  ModifyDictProcess.h  ModifyWordProcess.cc  ModifyWordProcess.h  RecoverDictProcess.cc  RecoverDictProcess.h  RecoverWordProcess.cc  RecoverWordProcess.h
src/CProcess/PostProcess/: CMakeLists.txt
src/CProcess/PreProcess/: CMakeLists.txt  DeleteChSegWordProcess.cc  DeleteChSegWordProcess.h  InsertChSegWordProcess.cc  InsertChSegWordProcess.h  LoadChSegWordProcess.cc  LoadChSegWordProcess.h  ModifyChSegWordProcess.cc  ModifyChSegWordProcess.h  RecoveryChSegWordProcess.cc  RecoveryChSegWordProcess.h
src/CProcess/Template/: CMakeLists.txt  CreateTemplateLibProcess.cc  CreateTemplateLibProcess.h  DeleteTemplateLibProcess.cc  DeleteTemplateLibProcess.h  DeleteTemplateProcess.cc  DeleteTemplateProcess.h  InsertSysTemplateLibProcess.cc  InsertSysTemplateLibProcess.h  InsertTemplateProcess.cc  InsertTemplateProcess.h  LoadTemplateProcess.cc  LoadTemplateProcess.h  ModifyTemplateLibProcess.cc  ModifyTemplateLibProcess.h  ModifyTemplateProcess.cc  ModifyTemplateProcess.h  RecoverTemplateLibProcess.cc  RecoverTemplateLibProcess.h  RecoverTemplateProcess.cc  RecoverTemplateProcess.h
src/CProcess/Translate/: CMakeLists.txt  OltDownloadProcess.cc  OltDownloadProcess.h  OltTransProcess.cc  OltTransProcess.h  RttSegProcess.cc  RttSegProcess.h  RttTransProcess.cc  RttTransProcess.h
src/Common/: BaseMutex.h  BasicType.h  ByteBuffer.cc  ByteBuffer.h  CMakeLists.txt  CSequence.cc  CSequence.h  ErrorCode.h  ICUConverter.cc  ICUConverter.h  MsgType.cc  MsgType.h  RWLock.cc  RWLock.h  Utf8Stream.cc  Utf8Stream.h  f_utility.cc
src/Configurator/: CMakeLists.txt  Configurator.cc  Configurator.h
src/DataBase/: CMakeLists.txt  DBConnPool.cc  DBConnPool.h  DBOperation.cc  DBOperation.h
src/DictLibrary/: BaseWord.cc  BaseWord.h  CMakeLists.txt  DictDef.h  DictEvent.h  DictManager.cc  DictManager.h  DictPersistent.cc  DictPersistent.h  DictProcessor.cc  DictProcessor.h  Dictionary.cc  Dictionary.h  WordIndex.cc  WordIndex.h
src/EventEngine/: BlockingDeque.h  CMakeLists.txt  EventData.h  EventEngine.cc  EventEngine.h
src/GeneralOperation/: CMakeLists.txt  GeneralOperation.cc  GeneralOperation.h
src/LanguageTools/: CLanguage.cc  CLanguage.h  CMakeLists.txt  CodeConver.h  NewTools.cpp  NewTools.h  PuncResource.cc  PuncResource.h  SentSpliter.cc  SentSpliter.h  Tools2.h  Utf8ZhHant2CN.cc  Utf8ZhHant2CN.h  ZDQToken.h  deelx.h  flmsri.h  lmsridll.h
src/LanguageTools/Vietnam/: VietnamLower.h
src/LanguageTools/chinese/: CMakeLists.txt  ChSegmentDef.h  ChSegmentEvent.h  ChSegmentManager.cc  ChSegmentManager.h  ChType.cpp  ChType.h  DataStruct.h  Dictionary.cpp  Dictionary.h  INTPBCLAS.cpp  INTPBCLAS.h  PBCLAS.cpp  PBCLAS.h  POSTager.cpp  POSTager.h  Perceptron.cpp  Perceptron.h  PerceptronPOS.cpp  PerceptronPOS.h  Ptrcmp.h
src/LanguageTools/japanese/: CMakeLists.txt  Class.cpp  Class.h  Connect.cpp  Connect.h  Dictionary.cpp  Dictionary.h  Katuyou.cpp  Katuyou.h  TrieTree.cpp  TrieTree.h  configure.h  iotool.cpp  iotool.h  lookup.cpp  stdafx.cpp  token.cpp  token.h
src/LanguageTools/korean/: .Makefile.swp  KMA_DLL.h  Main.cpp  Makefile  (+5 more)
src/Log/: CMakeLists.txt  LogData.cc  LogData.h  LogPrinter.cc  LogPrinter.h  LogStream.cc  LogStream.h
src/NetDriver/: Acceptor.cc  Acceptor.h  AsyncNetDriver.cc  AsyncNetDriver.h  CMakeLists.txt  Connection.cc  Connection.h  NetInterface.cc  NetInterface.h  NetPacket.cc  NetPacket.h  NetRequest.cc  NetRequest.h  NetResponse.cc  NetResponse.h  NetType.h  UidGenerator.h
src/OltManager/: CMakeLists.txt  OltSubmitReq.cc  OltSubmitReq.h  OltSubmitRes.cc  OltSubmitRes.h  OltTaskManager.cc  OltTaskManager.h
src/PostProcessor/: CMakeLists.txt  PostProcEvent.h  PostProcessor.cc  PostProcessor.h
src/PreProcessor/: CMakeLists.txt  LanguageProcess.cc  LanguageProcess.h  PreProcReq.cc  PreProcReq.h  PreProcRes.cc  PreProcRes.h  PreProcessor.cc  PreProcessor.h
src/SessionManager/: CMakeLists.txt  CSession.cc  CSession.h  SerSessManager.cc  SerSessManager.h  SessionManager.cc  SessionManager.h  UsrSessManager.cc  UsrSessManager.h
src/SipRPC/: CMakeLists.txt  HttpHeader.cc  HttpHeader.h  SipRPC.cc  SipRPC.h  f_utility.cc  f_utility.h
src/SoftProtect/: PermitKey.h  SoftProtectHandle.h
src/TemplateLibrary/: CMakeLists.txt  TemplateDef.h  TemplateEvent.h  TemplateLib.cc  TemplateLib.h  TemplatePersistent.cc  TemplatePersistent.h  TemplateProcessor.cc  TemplateProcessor.h  UsrTemplateManager.cc  UsrTemplateManager.h  leonICTTemplate.cpp  leonICTTemplate.h
src/TestCase/: CMakeLists.txt  blocking_deque.cc  db_test.cc  event_engine_test.cc  log_test.cc  net_test.cc  rwlock_test.cc  time_test.cc  uuid_test.cc
src/TextHandler/: CMakeLists.txt  TextHandler.cc  TextHandler.h  TextHandlerEvent.h
src/TextParser/: CMakeLists.txt  TextTools.cc  TextTools.h  TxtParser.cc  TxtParser.h
src/Timer/: CMakeLists.txt  CTimer.cc  CTimer.h  TimeEvent.cc  TimeEvent.h  TimeQueue.h
src/TinyXml/: CMakeLists.txt  tinystr.h  tinyxml.cc  tinyxml.h  tinyxmlparser.cc
src/TransController/: CMakeLists.txt  TransControlEvent.h  TransController.cc  TransController.h  TransCore.cc  TransCore.h  TransSession.cc  TransSession.h  TransSlave.h  TransTask.h  UsrControlBlock.cc  UsrControlBlock.h
src/TransText/: CMakeLists.txt  LTransTextProcessor.cc  LTransTextProcessor.h  TextFormat.cc  TextFormat.h  TextProcReq.h  TextProcRes.h  TimeLog.cc  TimeLog.h  TransText.cc  TransText.h
(+359 files in other folders)
