ADD_SUBDIRECTORY(Common)
ADD_SUBDIRECTORY(Configurator)
ADD_SUBDIRECTORY(CProcess)
ADD_SUBDIRECTORY(DataBase)
ADD_SUBDIRECTORY(DictLibrary)
ADD_SUBDIRECTORY(EventEngine)
ADD_SUBDIRECTORY(LanguageTools)
ADD_SUBDIRECTORY(Log)
ADD_SUBDIRECTORY(NetDriver)
ADD_SUBDIRECTORY(OltManager)
ADD_SUBDIRECTORY(PreProcessor)
ADD_SUBDIRECTORY(PostProcessor)
ADD_SUBDIRECTORY(GeneralOperation)
ADD_SUBDIRECTORY(SessionManager)
ADD_SUBDIRECTORY(TemplateLibrary)
ADD_SUBDIRECTORY(TextHandler)
ADD_SUBDIRECTORY(TextParser)
ADD_SUBDIRECTORY(Timer)
ADD_SUBDIRECTORY(TinyXml)
ADD_SUBDIRECTORY(TransController)
ADD_SUBDIRECTORY(TransText)
ADD_SUBDIRECTORY(TestCase)
ADD_SUBDIRECTORY(SipRPC)

# bin : master
INCLUDE_DIRECTORIES(./)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

AUX_SOURCE_DIRECTORY(. MASTER_SRC_LIST)
ADD_EXECUTABLE(master ${MASTER_SRC_LIST})

#LIB MYSQL
TARGET_LINK_LIBRARIES(master ${LIB_MYSQL_PATH})
TARGET_LINK_LIBRARIES(master ${LIB_MYSQLPP_PATH})

#LIB MAIN
TARGET_LINK_LIBRARIES(master lib_common)
TARGET_LINK_LIBRARIES(master lib_configurator)
TARGET_LINK_LIBRARIES(master lib_cprocess)
TARGET_LINK_LIBRARIES(master lib_database)
TARGET_LINK_LIBRARIES(master lib_dictlibrary)
TARGET_LINK_LIBRARIES(master lib_eventengine)
TARGET_LINK_LIBRARIES(master lib_languagetools)
TARGET_LINK_LIBRARIES(master lib_log)
TARGET_LINK_LIBRARIES(master lib_netdriver)
TARGET_LINK_LIBRARIES(master lib_oltmanager)
TARGET_LINK_LIBRARIES(master lib_preprocessor)
TARGET_LINK_LIBRARIES(master lib_postprocessor)
TARGET_LINK_LIBRARIES(master lib_generaloperation)
TARGET_LINK_LIBRARIES(master lib_sessionmanager)
TARGET_LINK_LIBRARIES(master ${LIB_SOFT_PROTECT})
TARGET_LINK_LIBRARIES(master ${LIB_SOFT_PROTECT_SYSINFO})
TARGET_LINK_LIBRARIES(master lib_templatelibrary)
TARGET_LINK_LIBRARIES(master lib_texthandler)
TARGET_LINK_LIBRARIES(master lib_textparser)
TARGET_LINK_LIBRARIES(master lib_timer)
TARGET_LINK_LIBRARIES(master lib_tinyxml)
TARGET_LINK_LIBRARIES(master lib_transcontroller)
TARGET_LINK_LIBRARIES(master lib_transtext)
TARGET_LINK_LIBRARIES(master lsiprpc)

#LIB LANGUAGE
TARGET_LINK_LIBRARIES(master ${LIB_EN_TOKEN_PATH}${LIB_EN_TOKEN_NAME})

#LIB BOOST
TARGET_LINK_LIBRARIES(master ${LIB_BOOST_PATH}${LIB_BOOST_THREAD_NAME})
TARGET_LINK_LIBRARIES(master ${LIB_BOOST_PATH}${LIB_BOOST_REGEX_NAME})
TARGET_LINK_LIBRARIES(master ${LIB_BOOST_PATH}${LIB_BOOST_DATETIME_NAME})
TARGET_LINK_LIBRARIES(master ${LIB_BOOST_PATH}${LIB_BOOST_SYSTEM_NAME})

