INCLUDE_DIRECTORIES(../)
AUX_SOURCE_DIRECTORY(. COMMON_SRC_LIST)
ADD_LIBRARY(lib_common ${COMMON_SRC_LIST})

#LIB ICU

IF(MAKE_PLATFORM_WIN64)
	TARGET_LINK_LIBRARIES(lib_common ${ICU_LIB_PATH}/icudt.lib)
	TARGET_LINK_LIBRARIES(lib_common ${ICU_LIB_PATH}/icuin.lib )
	TARGET_LINK_LIBRARIES(lib_common ${ICU_LIB_PATH}/icuio.lib )
	TARGET_LINK_LIBRARIES(lib_common ${ICU_LIB_PATH}/icule.lib )
	TARGET_LINK_LIBRARIES(lib_common ${ICU_LIB_PATH}/iculx.lib)
	TARGET_LINK_LIBRARIES(lib_common ${ICU_LIB_PATH}/icuuc.lib)
ELSEIF(MAKE_PLATFORM_WIN32)
	TARGET_LINK_LIBRARIES(lib_common ${ICU_LIB_PATH}/icudt.lib)
	TARGET_LINK_LIBRARIES(lib_common ${ICU_LIB_PATH}/icuin.lib )
	TARGET_LINK_LIBRARIES(lib_common ${ICU_LIB_PATH}/icuio.lib )
	TARGET_LINK_LIBRARIES(lib_common ${ICU_LIB_PATH}/icule.lib )
	TARGET_LINK_LIBRARIES(lib_common ${ICU_LIB_PATH}/iculx.lib)
	TARGET_LINK_LIBRARIES(lib_common ${ICU_LIB_PATH}/icuuc.lib)
ELSEIF(MAKE_PLATFORM_LINUX64)
	TARGET_LINK_LIBRARIES(lib_common ${ICU_LIB_PATH}/libsicui18n.a)
	TARGET_LINK_LIBRARIES(lib_common ${ICU_LIB_PATH}/libsicuio.a )
	TARGET_LINK_LIBRARIES(lib_common ${ICU_LIB_PATH}/libsicule.a )
	TARGET_LINK_LIBRARIES(lib_common ${ICU_LIB_PATH}/libsiculx.a )
	TARGET_LINK_LIBRARIES(lib_common ${ICU_LIB_PATH}/libsicuuc.a)
	TARGET_LINK_LIBRARIES(lib_common ${ICU_LIB_PATH}/libsicudata.a)
ENDIF()

