ADD_SUBDIRECTORY(uyghur)
ADD_SUBDIRECTORY(tibet)
ADD_SUBDIRECTORY(chinese)
ADD_SUBDIRECTORY(thai)
ADD_SUBDIRECTORY(japanese)
ADD_SUBDIRECTORY(korean)

INCLUDE_DIRECTORIES(../)
INCLUDE_DIRECTORIES(./)
AUX_SOURCE_DIRECTORY(. LANGUAGETOOLS_SRC_LIST)
ADD_LIBRARY(lib_languagetools ${LANGUAGETOOLS_SRC_LIST})
TARGET_LINK_LIBRARIES(lib_languagetools lib_uyconv)
TARGET_LINK_LIBRARIES(lib_languagetools lib_uyidentify)
TARGET_LINK_LIBRARIES(lib_languagetools lib_uynetrans)
TARGET_LINK_LIBRARIES(lib_languagetools lib_tibetseg)
TARGET_LINK_LIBRARIES(lib_languagetools lib_tibetsplitsent)
TARGET_LINK_LIBRARIES(lib_languagetools lib_chsegmanager)
TARGET_LINK_LIBRARIES(lib_languagetools lib_tibetnumber)
TARGET_LINK_LIBRARIES(lib_languagetools lib_thai)
TARGET_LINK_LIBRARIES(lib_languagetools lib_japanese)

